    + Implement boolean attribute conversion in 'HTMLBuilder.optimize_attrs()'.
    + Refactor 'format_attrs()' to 'HTMLBuilder.render_attrs()'. Change the
      argument to a dict instead of keyword args. Delete the None handling
      because 'HTMLBuilder.optimize_attrs()' now does it.

- webhelpers.html.tags:

    * Delete 'convert_boolean_attrs()'. The HTML builder now does this itself.

- Port doctests in 'html' subpackage to unit tests.

2.0b5 (2013-11-24)
------------------

- Port to Python 3.  Tested on Python 3.3.2 and 2.7.4.
- Depend on the 'six' distribution for Python 2/3 unification.
- Removed all "u" string prefixes so it should work on Python 3.2. (Prefixes in
  former doctests remain; these have not been supported as doctests since
  2.0b4.)

2.0b4 (2013-11-11)
------------------

- Change test suite to py.test, and convert doctests to unit tests. Some Python
  examples were left in the docs for documentation. Did not port the doctests
  in the 'html' subpackage because of the potential overhaul of that package.

- delete submodules:

  * media (moved ``choose_height()`` to misc. ``get_dimensions()`` has equivalents on
    PyPI; e.g., the ``dimensions`` and ``imagefacts`` distributions)

- webhelpers.containers:

  * Rename ``only_some_keys()`` to ``copy_keys()``, and ``except_keys()`` to 
    ``copy_keys_except()``, and ``extract_keys()`` to ``split_dict()``. In all
    these functions change the ``keys`` argument to ``\*keys``. This parallels
    a previous change to ``del_keys()`` in 2.0b3.

- webhelpers.html.tags:

  * The ``image()`` helper no longer accepts args 'path' or 'use_pil'. In
    WebHelpers these invoked the 'media' package to parse the width and
    height from the image file, but the 'media' package was not ported to
    WebHelpers2. It raises TypeError if these args are specified.

- webhelpers.text:

  * Change the argument signature of ``series()``. The items are now positional